app-dev.yaml
# Joseph Ogunniyi 2022
# This is the version of YAML we are using with the Kubernetes API
apiVersion: apps/v1
# The kind is the type of kubernetes resource we are using
# A deployment is when we run code on a server
kind: Deployment
# Metadata is information related to the object we created in Kubernetes
metadata:
# The name here is the name of our deployment
  name: stedi-joseph-dev
spec:
# Replicas refers to the number of pods we deploy
  replicas: 1
# A selector is a route to my pod
  selector:
# Matchlabels are a label for my selector
    matchLabels:
# App is a specific kind of label for my podkub
      app: stedi-joseph-dev
# The Template describes all the features of my pod
  template:
# Metadata provides labels for my template
    metadata:
      labels:
        app: stedi-joseph-dev
# The spec refers to the specification of my containers in my pod
    spec:
# Containers can have one or more docker containers in the pod
      containers:
# The name of the container is specified below
        - name: stedi-joseph
# The image is a prebuilt file containing the operating system
# If no web domain is specified, builder will assume it goes to dockerhub.
          image: gcr.io/team-fire262/stedi-joseph
          ports:
# The container port is a specific port the pod listens on
           - containerPort: 80
# Resources are the compute resources used by the pod in the cloud
          resources:
# Limits represent the max amount of cpu and memory allowed for the pod
            limits:
# CPU is the max amount of CPU that can be used by the pod
              cpu: ".125"
# Memory is the max amount of memory that can be used by the pod
              memory: "500Mi"
# Requests is the minimum amount of compute resources used by the pod
            requests:
# CPU is the minimum amount of CPU the pod needs to run
              cpu: ".125"
# Memory is the minimum amount of memory the pod needs to run
              memory: "250Mi"
# LivenessProbe is a configuration that checks the pod for health
          livenessProbe:
# HttpGet instructs kubernetes to do an HTTP request to check health
            httpGet:
# Path defines the url to use when doing the HTTP request
              path: /
# Port defines the port to use when doing the HTTP request
              port: 4567
# initialDelaySeconds tells Kubernetes to wait before doing a request
            initialDelaySeconds: 30
# periodSeconds tells Kubernetes how often to check health
            periodSeconds: 3
---
# apiVersion tells Kubernetes which version of ymdiraml to use
apiVersion: v1
# kind tells what kind of object to create
kind: Service
# metadata is the metadata
metadata:
  name: stedi-joseph-nodeport
spec: 
    # 'selector' tells network layer how to find the right pod
    selector:
      app: stedi-joseph-dev
    type: NodePort # distrubutes network packets to one or more pods
    ports:
      - port: 80
        targetPort: 4567 # port that pod listens to inside of Kubernetes
---
# apiVersion tells Kubernetes which version of ymdiraml to use
apiVersion: networking.k8s.io/v1
# kind tells what kind of object to create
kind: Ingress
# metadata is the metadata
metadata:
  name: stedi-joseph-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: stedi-joseph
    networking.gke.io/managed-certificates: stedi-joseph-certificate2
    # kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: "gce"
# New spec for final three-build layout
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /dev
#         pathType: ImplementationSpecific
#         backend:
#           service:
#             name: stedi-joseph-nodeport
#             port:
